[sdist]
formats = zip

[metadata]
name = pyasn1_alt_modules
version = attr: pyasn1_alt_modules.__version__
description = An alternative collection of ASN.1-based protocol modules
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD
license_file = LICENSE.txt
url = https://github.com/russhousley/pyasn1-alt-modules
author = Russ Housley
author_email = housley@vigilsec.com
maintainer = Russ Housley
maintainer_email = housley@vigilsec.com
project_urls =
    Source=https://github.com/russhousley/pyasn1-alt-modules
    Issues=https://github.com/russhousley/pyasn1-alt-modules/issues
    Changelog=https://github.com/russhousley/pyasn1-alt-modules/blob/master/CHANGES.txt
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
python_requires = >=3.10
zip_safe = True
setup_requires = setuptools
install_requires =
    pyasn1>=0.6.0
packages =
    pyasn1_alt_modules
